add zebrunner nexus dev repo

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots/"
     }
+    maven {
+        url "https://nexus.zebrunner.dev/repository/maven-snapshots/"
+    }
 }
 
 dependencies {
