--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: qoqa/action-s3-cp@v1.1
         env:
-          AWS_S3_BUCKET: 'zebrunner'
+          AWS_S3_BUCKET: 'zebrunner-stage'
           AWS_ACCESS_KEY_ID: ${{ secrets.DOC_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DOCS_AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.DOCS_AWS_REGION }}
