--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,12 @@ repositories {
 
 dependencies {
     api("com.zebrunner:agent-core:${coreVersion}")
-    implementation("org.testng:testng:7.3.0")
-    implementation("com.google.code.gson:gson:2.8.6")
+    implementation("org.testng:testng:7.5")
+    implementation('com.google.code.gson:gson:2.9.0')
 
-    implementation("org.slf4j:slf4j-api:1.7.30")
-    annotationProcessor("org.projectlombok:lombok:1.18.10")
-    compileOnly("org.projectlombok:lombok:1.18.10")
+    implementation('org.slf4j:slf4j-api:1.7.36')
+    annotationProcessor('org.projectlombok:lombok:1.18.24')
+    compileOnly("org.projectlombok:lombok:1.18.24")
 }
 
 apply from: 'publish-maven.gradle'
