--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,14 @@ dependencies {
     implementation('org.slf4j:slf4j-api:1.7.36')
     annotationProcessor('org.projectlombok:lombok:1.18.24')
     compileOnly("org.projectlombok:lombok:1.18.24")
+
+    testImplementation("org.mockito:mockito-core:4.6.1")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.2")
+    testImplementation("org.junit.jupiter:junit-jupiter-params:5.8.2")
 }
 
 apply from: 'publish-maven.gradle'
+
+test {
+    useJUnitPlatform()
+}
