--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     api("com.zebrunner:agent-core:${coreVersion}")
     implementation('org.testng:testng:7.7.1')
     implementation('com.google.code.gson:gson:2.9.0')
+    implementation('com.konghq:unirest-java:3.13.10')
 
     implementation('org.slf4j:slf4j-api:1.7.36')
     annotationProcessor('org.projectlombok:lombok:1.18.24')
